?? ??? 20??, PHP 5.3.3
- Upgraded bundled libmagic to version 5.03. (Mikko)

- Improved LCG entropy. (Rasmus, Samy Kamkar)

- Added libpng 1.4.0 support. (Pierre)
- Added support for DISABLE_AUTHENTICATOR for imap_open. (Pierre)
- Added missing host validation for HTTP urls inside FILTER_VALIDATE_URL.
  (Ilia)
- Added stream_resolve_include_path(). (Mikko)

- Fixed bug #50732 (exec() adds single byte twice to $output array). (Ilia)
- Fixed bug #50728 (All PDOExceptions hardcode 'code' property to 0). (Joey,
  Ilia)
- Fixed bug #50680 (strtotime() does not support eighth ordinal number).
  (Ilia)
- Fixed bug #50661 (DOMDocument::loadXML does not allow UTF-16). (Rob)
- Fixed bug #50657 (copy() with an empty (zero-byte) HTTP source succeeds
  but returns false). (Ilia)
- Fixed bug #50636 (MySQLi_Result sets values before calling constructor).
  (Pierrick)
- Fixed bug #50632 (filter_input() does not return default value if the
  variable does not exist). (Ilia)
- Fixed bug #50576 (XML_OPTION_SKIP_TAGSTART option has no effect). (Pierrick)
- Fixed bug #49560 (oci8: using LOBs causes slow PHP shutdown). (Oracle Corp.)
- Fixed bug #48590 (SoapClient does not honor max_redirects). (Sriram)
- Fixed bug #48190 (Content-type parameter "boundary" is not case-insensitive
  in HTTP uploads). (Ilia)
- Fixed bug #47409 (extract() problem with array containing word "this").
  (Ilia, chrisstocktonaz at gmail dot com)
- Fixed bug #47281 ($php_errormsg is limited in size of characters)
  (Oracle Corp.)
- Fixed bug #44827 (define() allows :: in constant names). (Ilia)


?? ??? 20??, PHP 5.3.2
- Upgraded bundled sqlite to version 3.6.21. (Ilia)
- Upgraded bundled PCRE to version 8.00. (Scott)

- Changed gmp_strval() to use full range from 2 to 62, and -2 to -36. FR #50283
  (David Soria Parra)
- Changed "post_max_size" php.ini directive to allow unlimited post size by
  setting it to 0. (Rasmus)
- Changed tidyNode class to disallow manual node creation. (Pierrick)
